--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="./index.html" class="link header-logo"
             >Web<span class="color-logo list">Studio</span></a
           >
-          <button data-menu-open class="nav-btn">
+          <button  class="nav-btn js-open-menu">
           <svg class="nav-btn-svg" width="32" height="22">
                   <use href="./images/icons.svg#icon-hamburger"></use>
                 </svg>
@@ -65,9 +65,9 @@
           </ul>
         </address>
 
-        <div data-menu class="mobile is-hidden">
+        <div  class="mobile js-menu-container">
           <div class="mobile-conteiner">
-            <button data-menu-close type="button" class="mobile-btn">
+            <button  type="button" class="mobile-btn js-close-menu">
               <svg width="24" height="24">
                 <use class="modal-svg-close" href="./images/icons.svg#icon-close"></use>
               </svg>
