--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advantages-list">
               <div class="advantages-icons icon-center">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
